[gd_scene load_steps=14 format=1]

[ext_resource path="res://rcos/looks/prototype/theme.tres" type="Theme" id=1]
[ext_resource path="res://remote_connector/main_gui.gd" type="Script" id=2]
[ext_resource path="res://rcos/lib/scroller_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://rcos/lib/scroller_input_area.tscn" type="PackedScene" id=4]
[ext_resource path="res://rcos/fonts/font_awesome/Font Awesome 5 Free-Solid-900.otf" type="DynamicFontData" id=5]
[ext_resource path="res://remote_connector/graphics/scan.background.png" type="Texture" id=6]
[ext_resource path="res://remote_connector/graphics/scan.spinner.png" type="Texture" id=7]
[ext_resource path="res://rcos/fonts/teko/bitmap/teko-regular-12.fnt" type="BitmapFont" id=8]
[ext_resource path="res://remote_connector/open_connection_dialog.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.199219, 0.199219, 0.199219, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 2
border_blend = true
draw_bg = true

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[sub_resource type="GDScript" id=3]

script/source = "extends Panel

var mClock = 0

func _ready():
	connect(\"visibility_changed\", self, \"_visibility_changed\")

func _visibility_changed():
	mClock = 0
	set_fixed_process(!is_hidden())

func _fixed_process(delta):
	mClock += delta
	var icon = get_node(\"spinner/icon\")
	icon.set_rot(icon.get_rot() - delta*2)
	var label = get_node(\"label\")
	label.set_hidden(fmod(mClock, 0.5) > 0.25)
"

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 5 )

[node name="main_gui" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="interfaces_panel" type="Panel" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 1 )

[node name="interfaces_scroller" parent="interfaces_panel" instance=ExtResource( 3 )]

margin/left = 2.0
margin/top = 2.0
margin/right = 2.0
margin/bottom = 2.0

[node name="interfaces_list" type="VBoxContainer" parent="interfaces_panel/interfaces_scroller"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 1
alignment = 0

[node name="scroller_input_area" parent="interfaces_panel/interfaces_scroller" instance=ExtResource( 4 )]

[node name="buttons" type="ReferenceFrame" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0

[node name="open_connection" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ""
flat = false

[node name="scan" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ""
flat = false

[node name="button1" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 80.0
margin/top = 0.0
margin/right = 120.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="button2" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="button3" type="Button" parent="buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 40.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="scan_progress" type="Panel" parent="."]

visibility/visible = false
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 40.0
script/script = SubResource( 3 )

[node name="spinner" type="TextureFrame" parent="scan_progress"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 6 )
stretch_mode = 0

[node name="icon" type="Sprite" parent="scan_progress/spinner"]

transform/pos = Vector2( 20, 20 )
texture = ExtResource( 7 )

[node name="label" type="Label" parent="scan_progress"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 41.0
margin/top = 14.0
margin/right = 115.0
margin/bottom = 26.0
custom_fonts/font = ExtResource( 8 )
text = "SCANNING NETWORK"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="cancel_button" type="Button" parent="scan_progress"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 120.0
margin/top = 2.0
margin/right = 158.0
margin/bottom = 38.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = ""
flat = false

[node name="info_panel" type="Panel" parent="."]

editor/display_folded = true
anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 100.0
margin/right = 0.0
margin/bottom = 0.0
custom_styles/panel = SubResource( 1 )

[node name="info_widget" type="ReferenceFrame" parent="info_panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 4.0
margin/right = 4.0
margin/bottom = 4.0

[node name="label" type="Label" parent="info_panel/info_widget"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 14.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="open_connection_dialog" parent="." instance=ExtResource( 9 )]

visibility/visible = false


